* Use border-collapse: separate for normal screen.css too, so user-customized cells can render correctly.

--- a/nlw/share/skin/s3/css/print.css
+++ b/nlw/share/skin/s3/css/print.css
@@ -626,11 +626,6 @@ div.st-weblog-entrytitle span.text {
     font-family: Verdana, Helvetica, sans-serif;
 }
 
-
-table.st-ss {
-    border-collapse: separate !important;
-}
-
 table.st-ss td {
     border: #CCC 0.2px solid;
     color: black !important;
