--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -4373,3 +4373,8 @@ body#dashBoard div#controls div#controlsRight ul {
     border-bottom: 1px solid black;
     border-top: none;
 }
+
+table.st-ss {
+    border-collapse: separate !important;
+}
+
